[gd_scene load_steps=22 format=3 uid="uid://dy4317h5546fu"]

[ext_resource type="Script" path="res://scenes/game/game.gd" id="1_jrfsd"]
[ext_resource type="Environment" uid="uid://dgfqigrf3x07f" path="res://scenes/environment.tres" id="2_jklnn"]
[ext_resource type="PackedScene" uid="uid://bjfqx05kp4avr" path="res://objects/player/player.tscn" id="3_jgxyp"]
[ext_resource type="PackedScene" uid="uid://iloa2kxbbl5w" path="res://objects/behaviours/reset_behaviour.tscn" id="4_xvweo"]
[ext_resource type="AudioStream" uid="uid://ccoqwrhxihex6" path="res://assets/audio/gameover.wav" id="5_olrmt"]
[ext_resource type="Script" path="res://objects/camera_focus/camera_focus.gd" id="6_gneub"]
[ext_resource type="PackedScene" uid="uid://brcgwdt4hj1qp" path="res://objects/levels/Level1.tscn" id="7_k2cyl"]
[ext_resource type="Texture2D" uid="uid://d3n0x1tgcdcif" path="res://assets/platformer-kit-2.2/coinGold.png" id="8_d8puv"]
[ext_resource type="AudioStream" uid="uid://b5rnpws8keu5u" path="res://assets/audio/victory.wav" id="8_wmvjy"]
[ext_resource type="PackedScene" uid="uid://dbbhg4q1khlp" path="res://scenes/game/ui/VictoryScreen.tscn" id="9_653tu"]
[ext_resource type="Script" path="res://utils/quit_shortcut.gd" id="10_6xbkv"]

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_vqa5a"]
dof_blur_far_enabled = true
dof_blur_far_transition = 50.0
dof_blur_near_distance = 0.55
dof_blur_amount = 0.02

[sub_resource type="Animation" id="Animation_dkfma"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:fov")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [75.0]
}

[sub_resource type="Animation" id="Animation_h6ibh"]
resource_name = "fov_animate"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:fov")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1, 2.5),
"transitions": PackedFloat32Array(1, -2.37841, 1),
"update": 0,
"values": [65.0, 65.0, 75.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bm714"]
_data = {
"RESET": SubResource("Animation_dkfma"),
"fov_animate": SubResource("Animation_h6ibh")
}

[sub_resource type="FontFile" id="FontFile_518fn"]
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/32/0 = Vector2(0, 0)
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/32/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/32/0/kerning_overrides/32/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_6d14a"]
font = SubResource("FontFile_518fn")
font_size = 32
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8pmjv"]
font_color = Color(0.74902, 0.74902, 0.74902, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_yldm8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_yuofv"]
resource_name = "ready"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_66c3y"]
_data = {
"RESET": SubResource("Animation_yldm8"),
"ready": SubResource("Animation_yuofv")
}

[node name="Game" type="Node3D"]
script = ExtResource("1_jrfsd")

[node name="Environment" type="Node" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(0.931056, 0.225643, -0.286741, 0, 0.785857, 0.618409, 0.364877, -0.575773, 0.731677, -6.43284, 3.8896, 0)
light_energy = 1.2
shadow_enabled = true
shadow_opacity = 0.5

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = ExtResource("2_jklnn")
camera_attributes = SubResource("CameraAttributesPractical_vqa5a")

[node name="Player" parent="." instance=ExtResource("3_jgxyp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
MAX_FALL_VELOCITY = 17.0

[node name="ResetBehaviour" parent="Player" instance=ExtResource("4_xvweo")]

[node name="GameoverSfx" type="AudioStreamPlayer" parent="Player/ResetBehaviour"]
stream = ExtResource("5_olrmt")

[node name="CameraFocus" type="Marker3D" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("6_gneub")
target = NodePath("../Player")

[node name="Camera3D" type="Camera3D" parent="CameraFocus"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 7)
current = true
near = 0.5
far = 50.0

[node name="InitialAnimation" type="AnimationPlayer" parent="CameraFocus/Camera3D"]
autoplay = "fov_animate"
libraries = {
"": SubResource("AnimationLibrary_bm714")
}

[node name="Level1" parent="." instance=ExtResource("7_k2cyl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)

[node name="GameplayUI" type="CanvasLayer" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="GameplayUI"]
offset_left = 40.0
offset_top = 24.0
offset_right = 118.0
offset_bottom = 88.0
theme_override_constants/separation = 8

[node name="TextureRect" type="TextureRect" parent="GameplayUI/HBoxContainer"]
layout_mode = 2
texture = ExtResource("8_d8puv")

[node name="HBoxContainer" type="HBoxContainer" parent="GameplayUI/HBoxContainer"]
layout_mode = 2

[node name="CoinsCount" type="Label" parent="GameplayUI/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_6d14a")

[node name="Label" type="Label" parent="GameplayUI/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = " / 13"
label_settings = SubResource("LabelSettings_8pmjv")

[node name="VictorySfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_wmvjy")

[node name="VictoryScreen" parent="." instance=ExtResource("9_653tu")]

[node name="InitialFade" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="InitialFade"]
autoplay = "ready"
libraries = {
"": SubResource("AnimationLibrary_66c3y")
}

[node name="QuitShortcut" type="Node" parent="."]
script = ExtResource("10_6xbkv")

[connection signal="restart_button_pressed" from="VictoryScreen" to="." method="_on_victory_screen_restart_button_pressed"]
